--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -1,4 +1,4 @@
 {% load static %}
 
-<script src="{%static   'js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'js/cart.js' %}"></script>
+
+<link rel="stylesheet" href="{% static 'js/javascritImp.js' %}" />
