--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -10,6 +10,20 @@
 
 {% include 'products/prueba2.html' with classifications=classifications %}
 
+{% include 'products/category.html' with classifications=classifications %}
+
+{% include 'products/productos.html' with classifications=classifications %}
+
+{% include 'products/productosMinimal.html' with classifications=classifications %}
+
+{% include 'products/productosFeatured.html' with classifications=classifications %}
+
+{% include 'products/productosGrid.html' with classifications=classifications %}
+
+{% include 'products/tcs.html' with classifications=classifications %}
+
+{% include 'products/blog.html' with classifications=classifications %}
+
 <section class="bg-white dark:bg-gray-900">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 ">
         <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
