--- a/templates/base/css.html
+++ b/templates/base/css.html
@@ -1,13 +1,8 @@
 {% load static %}
 
-{# COMMENT: css/output.css comes from the tailwind output #}
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
+<link rel="stylesheet" href="{% static 'css/style.css' %}" />
+<link rel="stylesheet" href="{% static 'css/style2.css' %}" />
 
 
-{# COMMENT: vendor_css_files comes from micro_ecommerce.context_processors.vendor_files#}
-{% for css_file in vendor_css_files %}
-<link rel="stylesheet" href="{% static css_file %}">
-{% endfor %}
