--- a/templates/purchases/stripe/ver_venta.html
+++ b/templates/purchases/stripe/ver_venta.html
@@ -29,9 +29,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="px-4 py-2 text-gray-700">{{ venta.product.name }}</td>
+                            <td class="px-4 py-2 text-gray-700">{{ venta.product_name_snapshot }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ venta.quantity }}</td>
-                            <td class="px-4 py-2 text-gray-700">${{ venta.product.price }}</td>
+                            <td class="px-4 py-2 text-gray-700">${{ venta.product_price_snapshot }}</td>
                             <td class="px-4 py-2 text-gray-700">${{ venta.total_price }}</td>
                         </tr>
                     </tbody>
