--- a/templates/products/detail.html
+++ b/templates/products/detail.html
@@ -2,53 +2,81 @@
 
 {% block content %}
 
-<div class="flex flex-col md:flex-row">
-    <div class="w-full md:w-3/4 space-y-4">
+<div class="row bg-light p-4 rounded">
+    <div class="col-md-9 space-y-4">
         <!-- main content-->
-        <div class="flex justify-between items-center mb-4">
-            <h2 class="text-4xl font-bold dark:text-white">{{ object.name }}</h2>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2 class="fw-bold text-dark">{{ object.name }}</h2>
             <div>
                 <a href="{% url 'products:filter_by_provider' object.user.pk %}" class="btn btn-primary">Filtrar por proveedor</a>
             </div>
         </div>
-{% if object.description %}
-        <p class="mb-3 font-light text-gray-500 dark:text-gray-400 first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:font-bold first-letter:text-gray-900 dark:first-letter:text-gray-100 first-letter:mr-3 first-letter:float-left">
-              {{ object.description|linebreaksbr }}
+        {% if object.description %}
+        <p class="mb-3 text-muted text-uppercase">
+            {{ object.description|linebreaksbr }}
         </p>
-
         {% endif %}
-        {% include 'products/attachments-table.html' with attachments=attachments is_owner=is_owner %}
+{#        {% include 'products/attachments-table.html' with attachments=attachments is_owner=is_owner %}#}
 
     </div>
 
-    <div class="w-full md:w-1/4 space-y-4">
+    <div class="col-md-3 space-y-4">
         <!-- sidebar -->
         <div>
             {% include 'purchases/buy-btn-form.html' with product=object %}
         </div>
         {% if object.image %}
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <div>
-                    <img class="h-auto max-w-full rounded-lg" src="{{ object.image.url }}" alt="">
+                    <img class="img-fluid rounded" src="{{ object.image.url }}" alt="">
                 </div>
+            </div>
+        {% endif %}
+
+        {% if object.offer %}
+            <div>
+                <h3 class="fw-bold mb-3">Detalles de la Oferta</h3>
+                <p>Precio Nuevo: {{ object.offer.precio_nuevo }}</p>
+                <p>Precio Anterior: {{ object.offer.precio_viejo }}</p>
+                <p>Fecha de Inicio: {{ object.offer.start_date|date:"d. M, Y"  }}</p>
+                <p>Fecha de Fin: {{ object.offer.end_date|date:"d. M, Y"  }}</p>
+                <p>Descuento: {{ object.offer.descuento }}%</p>
+                <p>¿Oferta Activa?: {% if object.offer.is_offer_active %} Sí {% else %} No {% endif %}</p>
             </div>
         {% endif %}
 
         {% if form %}
         <div>
-            <h3>Update Product</h3>
+            <h3 class="fw-bold mb-3">Actualizar Producto</h3>
             <form method="POST" action="." enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit" class="btn-submit mt-2">Submit</button>
+                <button type="submit" class="btn btn-primary mt-2">Enviar</button>
             </form>
         </div>
         {% endif %}
 
         {% if request.user == object.user %}
         <div>
-            <a href="{% url 'products:manage' object.handle %}" class="btn-submit">Manage Product</a>
+            <a href="{% url 'products:manage' object.handle %}" class="btn btn-primary">Administrar Producto</a>
         </div>
+
+        {% if not object.offer %}
+        <form method="POST" action="{% url 'products:crear_oferta' object.pk %}">
+            {% csrf_token %}
+            <div>
+                <button type="submit" class="btn btn-secondary">Crear Oferta</button>
+            </div>
+        </form>
+            {% else %}
+            <form method="POST" action="{% url 'products:eliminar_oferta' object.pk %}">
+            {% csrf_token %}
+            <div>
+                <button type="submit" class="btn btn-secondary">Eliminar Oferta</button>
+            </div>
+        </form>
+        {% endif %}
+
         {% endif %}
 
     </div>
