--- a/templates/usuario/reset_pass/password_reset.html
+++ b/templates/usuario/reset_pass/password_reset.html
@@ -1,20 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
-  <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-20 w-full max-w-md">
+<div class="flex items-center justify-center min-h-screen bg-gray-100">
+  <div class="bg-white shadow-sm rounded px-4 pt-5 pb-4 mb-4 flex flex-col items-stretch w-full max-w-md">
     <h1 class="text-3xl font-bold text-center text-gray-700 mb-4">Restablecer contraseña</h1>
 
-   <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-       <button name="Send email" type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Enviar correo</button>
-   </form>
+    <form method="post" class="w-full">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button name="Send email" type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 w-full">
+        Enviar correo
+      </button>
+    </form>
+
     {% if messages %}
-    <ul class="mt-4">
+    <ul class="mt-4 list-unstyled">
       {% for message in messages %}
       <li class="text-green-500">{{ message }}</li>
-      {% endfor %}
+    {% endfor %}
     </ul>
     {% endif %}
   </div>
