foto en clasificaciones

--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -211,7 +211,7 @@
                 
                   <li class="panel-list-item" >
                     <a href="#">
-                        <img src="./assets/images/electronics-banner-2.jpg" alt="mouse collection" width="250" height="119">
+                        <img src="{{ classification.image.url }}" alt="{{ classification.nombre }}" width="250" height="119">
                     </a>
                   </li>
                 </div>
