--- a/templates/purchases/solicitud/solicitud_stripe_detail.html
+++ b/templates/purchases/solicitud/solicitud_stripe_detail.html
@@ -31,7 +31,6 @@
 <div class="bg-white shadow-md rounded-lg p-6">
   <h2 class="text-2xl font-bold mb-4">Pedido #{{ purchase.pk }}</h2>
   <p class="text-gray-600 mb-2">Usuario: {{ purchase.user.username }}</p>
-  <p class="text-gray-600 mb-2">ID de sesión de Checkout de Stripe: {{ purchase.stripe_checkout_session_id }}</p>
  {% if purchase.completed %} <p class="text-gray-600 mb-2"> Estado de entrega:  {{ purchase.get_entrega_display }}</p> {% endif %}
   <p class="text-gray-600 mb-2">Completado: {% if purchase.completed %}Sí{% else %}No{% endif %}</p>
   <p class="text-gray-600 mb-2">Total: ${{ purchase.stripe_price }}</p>
@@ -42,9 +41,9 @@
 
     {% for item in solicitud_items %}
     <li class="bg-gray-100 rounded-lg p-4">
-      <h4 class="text-lg font-bold mb-2">{{ item.product.name }}</h4>
+      <h4 class="text-lg font-bold mb-2">{{ item.product_name_snapshot }}</h4>
       <p class="text-gray-600 mb-2">Cantidad: {{ item.quantity }}</p>
-      <p class="text-gray-600 mb-2">Precio unitario: ${{ item.product.price }}</p>
+      <p class="text-gray-600 mb-2">Precio unitario: ${{ item.product_price_snapshot}}</p>
      <p class="text-gray-600 mb-2">Subtotal: ${{ item.total_price }}</p>
     </li>
     {% endfor %}
